tests/bad/error_prop_func_no_result.oc
/// fail: Cannot use ! outside of a function returning Result

import std::result::{ Result }

def foo(ok: bool): Result<i32, str> => match ok {
    true => Ok(42),
    false => Error("error")
}

def bar() {
    let res0 = foo(true)!
    println(f"res0: {res0}")
    let res1 = foo(false)!
    println(f"res1: {res1}")
    return Ok(0)
}

def main() {
    match bar() {
        Ok => println("ok"),
        Error => println("error")
    }
}
